# dyvider

./: LICENSE  MANIFEST.in  README.md  long_description.rst  pyproject.toml  setup.py  tutorial.ipynb
dyvider/: __init__.py  algorithms.py  layers.py  objectives.py  utilities.py
tests/: test_algorithms.py  test_integration.py  test_layers.py  test_objectives.py  test_utilities.py
